<resources>
    <string name="app_name">Age Calculator</string>
    <string name="splash_name">Welcome to your age calculator!</string>
    <string name="splash_description">Splash</string>
    <string name="birthday" >Select Date</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="your_age_is">Your age is:</string>
</resources>
